@startuml

class User {
    id: UUID
    name: String
    email: String
    password: String
}

class Group {
    id: UUID
    name: String
}

class Expense {
    id: UUID
    name: String
    amount: BigDecimal
    paidAt: LocalDateTime
}

class ExpenseShare {
    id: UUID
    amountOwed: BigDecimal
    isPaid: boolean
}

class Settlement {
    id: UUID
    amount: BigDecimal
    paidAt: LocalDateTime
    comment: String
}

User "1" -- "0..*" Group: Owns
User "1..*" -- "0..*" Group: IsMemberOf

Group "1" -- "0..*" Expense: Has
User "1" -- "0..*" Expense: Pays
Expense "1" -- "1..*" ExpenseShare: Generates
ExpenseShare "1" -- "1" User: Owes

User "1" -- "0..*" Settlement: Pays -> fromUser
User "1" -- "0..*" Settlement: Receives -> toUser
Group "1" -- "0..*" Settlement: Lists

@enduml